--- a/Lab_Automate_marketing_campaign_generation.ipynb
+++ b/Lab_Automate_marketing_campaign_generation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/blob/main/Lab_Automate_marketing_campaign_generation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -43,6 +54,27 @@
       "source": [
         "# Lab: Automating marketing campaign generation using Enterprise Search, Vertex AI, Stable Diffusion, and Imagen\n",
         "\n",
+        "<table align=\"center\">\n",
+        "  <td>\n",
+        "    <a href=\"https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/Lab_Automate_marketing_campaign_generation.ipynb\">\n",
+        "      <img src=\"https://cloud.google.com/ml-engine/images/colab-logo-32px.png\" alt=\"Colab logo\"> Run in Colab\n",
+        "    </a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a href=\"https://github.com/arieljassan/marketing-campaign-generation/Lab_Automate_marketing_campaign_generation.ipynb\">\n",
+        "      <img src=\"https://cloud.google.com/ml-engine/images/github-logo-32px.png\" alt=\"GitHub logo\">\n",
+        "      View on GitHub\n",
+        "    </a>\n",
+        "  </td>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "KyBD0WMzJbgz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Introduction\n",
         "In this lab we will automate the creation of a marketing campaigns using Google Cloud and open source products, including Enterprise Search, Vertex LLM, Vertex Imagen, and Stable Diffusion.\n",
         "\n",
@@ -50,7 +82,7 @@
         "We assume you already have an Enterprise Search app and you have permissions to access Vertex Language models, Vertex Imagen, Enterprise Search, and a Vertex API Endpoint to a Stable Diffusion model.\n",
         "We also assume you have permissions to run Enterprise Search and Vertex.\n",
         "\n",
-        "To create an Enterprise Search app you can follow the instructions in [this colab](https://colab.sandbox.google.com/drive/1wzGDcHfjiOVHMNN0vTa9KL5Z7FRdcQ1c).\n",
+        "To create an Enterprise Search app you can follow the instructions in [this colab](https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/blob/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb).\n",
         "\n",
         "### Objectives\n",
         "1. Query Enterprise Search about a product using the Python SDK or the REST API.\n",
