--- a/Lab_Automate_marketing_campaign_generation.ipynb
+++ b/Lab_Automate_marketing_campaign_generation.ipynb
@@ -188,8 +188,8 @@
       "cell_type": "code",
       "source": [
         "# @title Set project parameters\n",
-        "PROJECT_ID = 'arielj-argolis-1' #@param {type: 'string'}\n",
-        "DATASTORE = 'gstore1_1695199087646' #@param {type:'string'}\n",
+        "PROJECT_ID = 'your-project' #@param {type: 'string'}\n",
+        "DATASTORE = 'your-data-store' #@param {type:'string'}\n",
         "LLM_MODEL = 'text-bison@001' #@param 'text-bison@001' {type: 'string'}\n",
         "VERTEX_REGION = 'us-central1' #@param \"us-central1\" {type: 'string'}\n",
         "IMAGEN_MODEL = 'imagegeneration@002' #@param 'imagegeneration@002' {type: 'string'}\n",
@@ -199,8 +199,8 @@
         "PRINT_REQUESTS = True #@param {type: 'boolean'}\n",
         "\n",
         "# Parameters of Stable Diffusion endpoint\n",
-        "STABLE_DIFFUSION_PROJECT = '1045041583947' #@param {type: 'string'}\n",
-        "STABLE_DIFFUSION_ENDPOINT = '1128752040005074944' #@param {type: 'string'}\n",
+        "STABLE_DIFFUSION_PROJECT = 'your-stable-diffusion-project' #@param {type: 'string'}\n",
+        "STABLE_DIFFUSION_ENDPOINT = 'your-stable-diffusion-endpoint' #@param {type: 'string'}\n",
         "STABLE_DIFFUSION_REGION = 'us-central1' #@param \"us-central1\" {type: 'string'}"
       ],
       "metadata": {
