--- a/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
+++ b/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPdxBssKdcic51MushsyyId",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/blob/main/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -41,6 +53,20 @@
       "cell_type": "markdown",
       "source": [
         "# Lab: Creating a data store in Enterprise Search\n",
+        "\n",
+        "<table align=\"center\">\n",
+        "  <td>\n",
+        "    <a href=\"https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/blob/main/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb\">\n",
+        "      <img src=\"https://cloud.google.com/ml-engine/images/colab-logo-32px.png\" alt=\"Colab logo\"> Run in Colab\n",
+        "    </a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a href=\"https://github.com/arieljassan/marketing-campaign-generation/blob/main/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb\">\n",
+        "      <img src=\"https://cloud.google.com/ml-engine/images/github-logo-32px.png\" alt=\"GitHub logo\">\n",
+        "      View on GitHub\n",
+        "    </a>\n",
+        "  </td>\n",
+        "</table>\n",
         "\n",
         "## Introduction\n",
         "In this lab we will create a data store in Enterprise Search and will add unstructured html files downloaded from the Google Store website.\n",
