--- a/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
+++ b/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdxBssKdcic51MushsyyId",
+      "authorship_tag": "ABX9TyPt5TrPjkMA5GstFyL/7cK6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,19 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Authenticate your notebook environment\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()"
+      ],
+      "metadata": {
+        "id": "1kgk45QEc6VC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "BUCKET = 'your-bucket-id' #@param {type: 'string'}"
       ],
       "metadata": {
@@ -98,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,6 +135,7 @@
         }
       ],
       "source": [
+        "# @title Clone the repository with sample html files\n",
         "! git clone https://github.com/arieljassan/gstore-sample-html.git"
       ]
     },
@@ -138,7 +152,7 @@
         "id": "7YOwxCxJZ9Gk",
         "outputId": "036dc0e8-4f2e-4b18-c1da-cfd0d9aa23c7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
