--- a/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
+++ b/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt5TrPjkMA5GstFyL/7cK6",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyM0pkNVTFZreHFFsXbzJqzj"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/arieljassan/marketing-campaign-generation/blob/main/Lab_Creating_a_data_store_in_Enterprise_Search.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
@@ -95,45 +84,29 @@
       "metadata": {
         "id": "1kgk45QEc6VC"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "BUCKET = 'your-bucket-id' #@param {type: 'string'}"
+        "PROJECT_ID = 'your-project-id' #@param {type: 'string'}\n",
+        "BUCKET = 'your-bucket-name' #@param {type: 'string'}\n",
+        "REGION = 'us-central1' #@param {type: 'string'}"
       ],
       "metadata": {
         "id": "m2kMZsxiaLDc"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JvOtRSWBY0Xx",
-        "outputId": "90de3ba4-d8b6-4a89-f4de-10f27c66ca5f"
+        "id": "JvOtRSWBY0Xx"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'gstore-sample-html'...\n",
-            "remote: Enumerating objects: 14, done.\u001b[K\n",
-            "remote: Counting objects: 100% (14/14), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Total 14 (delta 7), reused 14 (delta 7), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (14/14), 794.50 KiB | 8.93 MiB/s, done.\n",
-            "Resolving deltas: 100% (7/7), done.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @title Clone the repository with sample html files\n",
         "! git clone https://github.com/arieljassan/gstore-sample-html.git"
@@ -146,34 +119,19 @@
         "! ls gstore-sample-html/data/"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7YOwxCxJZ9Gk",
-        "outputId": "036dc0e8-4f2e-4b18-c1da-cfd0d9aa23c7"
+        "id": "7YOwxCxJZ9Gk"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "'Google Pixel 7 - Google Store.html'\n",
-            "'Google Pixel 7 Pro - Google Store.html'\n",
-            "'Google Pixel Buds A-Series, rich sound for less - Google Store.html'\n",
-            "'Google Pixel Phones - Google Store.html'\n",
-            "'Pixel 7a, Built to perform - Google Store.html'\n",
-            "'Pixel Buds Pro - Google Store.html'\n",
-            "'Pixel Fold, Power & Innovation Folded into one - Google Store.html'\n",
-            "'Wireless Earbuds from Google - Google Store.html'\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# @title Copy html files into bucket\n",
+        "# @title Create bucket and copy html files into it\n",
+        "# Create bucket.\n",
+        "! gsutil mb -p {PROJECT_ID} -l {REGION} gs://{BUCKET}\n",
+        "\n",
+        "# Copy files.\n",
         "! gsutil cp gstore-sample-html/data/*.html gs://{BUCKET}/"
       ],
       "metadata": {
